--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -10,8 +10,8 @@
     </ul>
   </div>
   <div class="col-md-8">
-    <%= form_for @post do |f| %>
-      <div class="form-group">
+      <%= form_for [@topic, @post] do |f| %> 
+     <div class="form-group">
 # #13
         <%= f.label :title %>
 # #14
